# scratch-git

./: .gitattributes  .gitignore  .gitmodules  .prettierrc  Cargo.toml  LICENSE  Project.sb3  README.md  copy_script.sh  debug.py  functions.sh  index.html  init.sh  jsconfig.json  log.txt  lol2.sb3  package-lock.json  package.json  privacy.html  project.json  project_config.json  rollup.config.cjs  rollup.config.js  scratch-git  scratch-git.py  scratch-git.sh  test.py  thing.html  tsconfig.json  userscript.js  vite.config.js  vite.config.js.timestamp-1717795335670-b1ff89ac7bdb1.mjs
assets/: index-DDqFzPXY.css  userscript-BUn-AtiM.css  userscript-Byg213d7.css  userscript-D45h81rJ.css  userscript-DCUvq20D.css
project/: project.json
public/: faq.html  privacy.html
scratch-space/: project.json
server/: __init__.py  application.py  diff.py  main.py  reloader.py  requirements.txt
src/: App.svelte  Project.svelte  accessors.js  api-wrapper.js  api.js  app.css  components.js  git-api.js  (+12 more)
src-frontend/: api.js  api.ts  bootstrap.ts  diff-indicators.js  diff-indicators.ts  global.d.ts  index.html  index.ts  init.ts  initialize.js  initialize.ts  jsconfig.json  log.ts  main.js  main.ts  package.json  pnpm-lock.yaml  scripts.ts  settings.ts  styles.css  tippy.css  utils.ts  vite.config.js
src-server/: Cargo.toml  Untitled-216 (1).sb3  Untitled-216.sb3  application.rs  config.rs  diff.rs  extract.rs  gh_auth.rs  git.rs  handlers.rs  main.rs  mod.rs  project.json  projects.rs  sb3.rs  sb_download.rs  tw_path.rs  zipping.rs
src-ws-server/: diff.rs  handlers.rs  main.rs
(+222 files in other folders)
