[package]
name = "scratch-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src-server/main.rs"
name = "scratch-git"

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
tungstenite = "0.21.0"
regex = "1.10.4"
itertools = "0.12.1"
dunce = "1.0.4"
walkdir = "2"