[package]
name = "scratch-git-gh-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src-server/main.rs"
name = "scratch-git-gh-pages"

[dependencies]
actix-web = "4"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
itertools = "0.12.1"
dunce = "1.0.4"
walkdir = "2"
minreq = { version = "2.11.2", features = ["json-using-serde", "https"] }
regex_static = "0.1.1"
anyhow = "1.0.86"
futures = "0.3.30"
